welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:9: error: ';' expected but ',' found.
  return mini,maxi} 
             ^